файлом forms/comment.htm

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		  <div class="user-content">
 			<ul>
 			  <li><a href="comment.html">1. Отправка комментария</a></li>
-			  <li><a href="login.html">2. Отправка формы входа</a></li>
+			  <li><a href="login.html">2. Отправкаправка формы входа</a></li>
 			  <li><a href="registration.html">3. Отправка формы регистрации</a></li>
 			</ul>
 		  </div>
