--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 				<div class="header-logo__text">
 					<div class="header-logo__title">Digital Lifestyle</div>
 				</div>
-			</div><a class="link" href="registration.html">Регистрация</a>
+			// </div><a class="link" href="registration.html">Регистрация</a>
 		</div>
 		<form class="plate" action="success.html">
 			<div class="plate__heading">Вход на сайт</div>
