login-done commit#1

--- a/login.html
+++ b/login.html
@@ -20,24 +20,24 @@
 				<div class="header-logo__text">
 					<div class="header-logo__title">Digital Lifestyle</div>
 				</div>
-			// </div><a class="link" href="registration.html">Регистрация</a>
+			</div><a class="link" href="registration.html">Регистрация</a>
 		</div>
-		<form class="plate" action="success.html">
+		<form class="plate" action="success.html" id="loginForm">
 			<div class="plate__heading">Вход на сайт</div>
-			<div class="error">Введите email</div>
-			<div class="error">Неверный формат email</div>
-			<div class="error">Введите пароль</div>
-			<div class="error error--with-desc">Неверный email или пароль</div>
-			<div class="error-description">
+			<div class="error" id="emptyEmail">Введите email</div>
+			<div class="error" id="errorEmail">Неверный формат email</div>
+			<div class="error" id="emptyPassword">Введите пароль</div>
+			<div class="error error--with-desc wrongEmailPass">Неверный email или пароль</div>
+			<div class="error-description wrongEmailPass">
 				<p>Введите верные данные для входа или воспользуйтесь <a href="#">восстановлением пароля, </a>чтобы войти на сайт.</p>
 			</div>
-			<input class="input" type="text" placeholder="Введите имя" name="name"/>
-			<input class="input" type="password" placeholder="Пароль" name="password"/>
+			<input class="input" type="text" placeholder="Введите имя" name="name" id="email" />
+			<input class="input" type="password" placeholder="Пароль" name="password" id="password" />
 			<div class="plate__links">
 				<label class="label form__label-checkbox">
 					<input class="form__input-checkbox" type="checkbox"/><span class="form__checkbox"> </span>Запомнить меня
 				</label><a class="link" href="#">Забыл пароль</a>
-			</div><a class="button button--login" href="#">Войти<span class="button__icon button__icon--right"><i class="fas fa-angle-right"> </i></span></a>
+			</div><a class="button button--login" href="#" id="submitLoginForm">Войти<span class="button__icon button__icon--right"><i class="fas fa-angle-right"> </i></span></a>
 	</form>
 	<div class="login-footer">
 		<p>&copy; Юрий Ключевский</p>
