--- a/registration.html
+++ b/registration.html
@@ -22,23 +22,23 @@
 				</div>
 			</div><a class="link" href="login.html">Вход</a>
 		</div>
-		<form class="plate" action="success.html">
+		<form class="plate" action="success.html" id="registrationForm">
 			<div class="plate__heading">Регистрация</div>
-			<div class="error">Введите email</div>
-			<div class="error">Неверный формат email</div>
-			<div class="error">Введите пароль</div>
-			<div class="error error--with-desc">Данный email уже занят</div>
-			<div class="error-description">
+			<div class="error" id="emptyEmail">Введите email</div>
+			<div class="error" id="errorEmail">Неверный формат email</div>
+			<div class="error" id="emptyPassword">Введите пароль</div>
+			<div class="error error--with-desc wrongEmail">Данный email уже занят</div>
+			<div class="error-description wrongEmail">
 				<p>Используйте другой email чтобы создать новый аккаунт.</p>
 				<p>Или воспользуйтесь <a href="#">восстановлением пароля</a>, чтобы войти на сайт.</p>
 			</div>
-			<input class="input" type="text" placeholder="Введите имя" name="name"/>
-			<input class="input" type="password" placeholder="Пароль" name="password"/>
+			<input class="input" type="text" placeholder="Введите имя" name="name" id="email"/>
+			<input class="input" type="password" placeholder="Пароль" name="password" id="password"/>
 			<div class="plate__links">
 				<label class="label form__label-checkbox">
 					<input class="form__input-checkbox" type="checkbox"/><span class="form__checkbox"> </span>Запомнить меня
 				</label><a class="link" href="#">Забыл пароль</a>
-			</div><a class="button button--login" href="#">Регистрация<span class="button__icon button__icon--right"><i class="fas fa-angle-right"> </i></span></a>
+			</div><a class="button button--login" href="#" id="submitRegistrationForm">Регистрация<span class="button__icon button__icon--right"><i class="fas fa-angle-right"> </i></span></a>
 		</form>
 		<div class="login-footer">
 			<p>&copy; Юрий Ключевский</p>
